[gd_scene load_steps=4 format=2]

[ext_resource path="res://screens/play_as_guest/PlayAsGuestScreen.gd" type="Script" id=1]
[ext_resource path="res://api/sign_in/SignInApi.tscn" type="PackedScene" id=2]
[ext_resource path="res://screens/play_as_guest/GuestName.gd" type="Script" id=3]

[node name="PlayAsGuestScreen" type="Node"]

script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="SignInApi" parent="." index="0" instance=ExtResource( 2 )]

[node name="VBoxContainer" type="VBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 640.0
margin_bottom = 480.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Rect" ]

[node name="GuestName" type="TextEdit" parent="VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 193.0
margin_right = 640.0
margin_bottom = 223.0
rect_min_size = Vector2( 0, 30 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
text = "Name"
readonly = false
highlight_current_line = false
syntax_highlighting = false
show_line_numbers = false
highlight_all_occurrences = false
override_selected_font_color = false
context_menu_enabled = true
smooth_scrolling = false
v_scroll_speed = 80.0
hiding_enabled = 0
wrap_lines = false
caret_block_mode = false
caret_blink = false
caret_blink_speed = 0.65
caret_moving_by_right_click = true
script = ExtResource( 3 )
_sections_unfolded = [ "Hint", "Rect" ]

[node name="HSeparator" type="HSeparator" parent="VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 227.0
margin_right = 640.0
margin_bottom = 231.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="BtnPlayNow" type="Button" parent="VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 235.0
margin_right = 640.0
margin_bottom = 255.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Play Now!"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 259.0
margin_right = 640.0
margin_bottom = 263.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="BtnChooseRoom" type="Button" parent="VBoxContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 267.0
margin_right = 640.0
margin_bottom = 287.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Choose Room"
flat = false
align = 1
_sections_unfolded = [ "Rect" ]

[connection signal="focus_entered" from="VBoxContainer/GuestName" to="VBoxContainer/GuestName" method="_on_GuestName_focus_entered"]

[connection signal="focus_exited" from="VBoxContainer/GuestName" to="VBoxContainer/GuestName" method="_on_GuestName_focus_exited"]

[connection signal="pressed" from="VBoxContainer/BtnPlayNow" to="." method="_on_BtnPlayNow_pressed"]


